# kaggle-capstone-enterprise-security

./: .env.agents.example  .gitignore  CHANGELOG.md  CHANGES_SUMMARY.md  CODEBASE_ANALYSIS.md  DELETE_DEPLOYMENTS.md  ENVIRONMENT_VARIABLES.md  EVALUATION_FRAMEWORK.md  MARKDOWN_VIEWERS.md  PRODUCTION_SETUP.md  README.md  README.md.backup  README_OPENING_TIPS.txt  TESTING.md  TESTING_GUIDE.md  check_health.py  check_health.sh  check_session_events.py  debug_a2a_response.py  env.template  fix_md_files.sh  main1.py  pyproject.toml  requirements.txt  test_a2a_unwrap.py  test_root_agent.py  test_root_agent.sh  test_root_agent_web_ui.py  ui.py  ui_cloudrun.py  verify_web_ui_traces.py
.streamlit/: config.toml  secrets.toml.example
agents/: __init__.py  incident_agent.py  orchestrator.py  root_agent.py  threat_agent.py
deployment/: ARCHITECTURE_AND_RESPONSE_FLOW.md  Dockerfile.incident_agent  Dockerfile.root_agent  Dockerfile.threat_agent  delete_deployment.sh  delete_deployments.sh  deploy_incident_agent.sh  deploy_root_agent.sh  deploy_threat_agent.sh
docs/: ARCHITECTURE.md
shared/: __init__.py  a2a_server.py  config.py  memory.py  vertex_registry.py
shared/communication/: __init__.py  a2a_client.py  a2a_server_fastapi.py  adk_root_agent_client.py
shared/config/: __init__.py
shared/discovery/: __init__.py
shared/memory/: __init__.py  incident_memory.py  memory.py  threat_memory.py
shared/web_server/: start_with_web_ui.py
tests/: __init__.py  test_a2a.py  test_incident_agent.py  test_integration.py  test_integration.sh  test_root_agent.py  test_root_agent_integration.py  test_threat_agent.py
